--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,9 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
+auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+file.reference.KB-Articles-Articles=Articles
 file.reference.KB-Articles-src=src
 files.encoding=UTF-8
-source.folder=${file.reference.KB-Articles-src}
+source.folder=${file.reference.KB-Articles-Articles}
